[project]
name = "pdf-to-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.3",
    "gradio>=5.1.0",
    "granian>=1.6.1",
    "loguru>=0.7.2",
    "promptic>=0.7.7",
    "pydantic>=2.9.2",
    "pypdf>=5.0.1",
    "sentry-sdk>=2.16.0",
    "tenacity>=9.0.0",
]
